--- a/public/user/css/style.css
+++ b/public/user/css/style.css
@@ -1961,6 +1961,13 @@ textarea.input {
   border-radius: 40px 0px 0px 40px;
 }
 
+@media (max-width: 767px) {
+  .col-7, .col-5 {
+      flex: 0 0 auto;
+      width: 100%;
+  }
+}
+
 .newsletter form .newsletter-btn {
   width: 160px;
   height: 40px;
