--- a/public/admin/css/check-units.css
+++ b/public/admin/css/check-units.css
@@ -85,6 +85,10 @@
     background-color: #ffc400; 
 }
 
+.notsold {
+    background-color: #ffc400; 
+}
+
 .approved {
     background-color: #00d885; 
 }
